--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 	<center>
- 	  <h3>home.html</h3>
+ 	  <h3>home</h3>
     </center>
      <img src="res/logo.png" width="80px" height="80px">
      <ul class="navbar">
